--- a/linear_models(part1).ipynb
+++ b/linear_models(part1).ipynb
@@ -186,7 +186,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Хоть распредление количеста слов в сообщениях примерно одиноковое, мы можем заметить сильный дизбаланс классов, поэтому использовать метрику accuracy не будет хорошим решением. Вместо нее можно рассмотреть меру F1 или ROC AUC, которая и будет взята за базовую"
+        "Хоть распредление количеста слов в сообщениях примерно одинаковое, мы можем заметить сильный дизбаланс классов, поэтому использовать метрику accuracy не будет хорошим решением. Вместо нее можно рассмотреть меру F1 или ROC AUC, которая и будет взята за базовую"
       ],
       "metadata": {
         "id": "D4U_NAcpjiIO"
