--- a/linear_models(part1).ipynb
+++ b/linear_models(part1).ipynb
@@ -304,7 +304,7 @@
         "\n",
         "plt.figure(figsize=(10,8),facecolor='g')\n",
         "plt.imshow(spam_cloud)\n",
-        "plt.title(\"Частые слова в сообщениях из обычных сообщений\",fontsize=20);\n",
+        "plt.title(\"Частые слова в обычных сообщениях\",fontsize=20);\n",
         "\n",
         "plt.axis('off')\n",
         "plt.tight_layout(pad=0)\n",
