--- a/linear_models(part1).ipynb
+++ b/linear_models(part1).ipynb
@@ -1156,7 +1156,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Таким образом, среди всех линейных моделей выигрывает по метрике ROC AUC выигрывает методом опорных векторов (92%), хотя проигрывает градиентному бустингу по точности и F1 мере. В следующем ноутбуке будет разобрана глубокая модель Bidirectional LSTM, которая справилась с классификацией еще лучше и достигла 0.96 по ROC AUC\n"
+        "Таким образом, среди всех линейных моделей по метрике ROC AUC выигрывает метод опорных векторов (92%), хотя проигрывает градиентному бустингу по точности и F1 мере. В следующем ноутбуке будет разобрана глубокая модель Bidirectional LSTM, которая справилась с классификацией еще лучше и достигла 0.96 по ROC AUC\n"
       ],
       "metadata": {
         "id": "RopSxc3trJeh"
